--- a/org-mode-donate.org
+++ b/org-mode-donate.org
@@ -64,7 +64,7 @@ Org mode!  You can buy at the [[http://orgmode.spreadshirt.com][US shop]] or at 
 
 #+HTML: <img src="http://orgmode.org/img/shirts.jpg" style="border:1px solid black; width:200px" alt="http://orgmode.org/img/shirts.jpg" />
 
-* They support us
+* COMMENT They support us
 
 [[http://fsffrance.org/][FSF France]] is making a monthly donation of 100€.  Thanks to FSF France for
 their support!
